test/conformance/chainsaw/mutate/e2e/emit-warning/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - name: nginx
    image: public.ecr.aws/docker/library/nginx:latest
