test/conformance/chainsaw/mutate/e2e/emit-warning/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-labels
spec:
  auditWarning: true
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    mutate:
      patchStrategicMerge:
        metadata:
          labels:
            foo: bar
    name: add-labels
  validationFailureAction: Audit
