test/conformance/chainsaw/mutate/e2e/emit-warning/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: test-emit-warning
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: policy.yaml
    - assert:
        file: policy-assert.yaml
  - name: step-02
    try:
    - script:
        content: "kubectl apply -f pod.yaml 2>&1 | grep -q 'Warning: policy add-labels.add-labels: mutated Pod/test-pod'"
